# fgp22_csordas

./: .gitignore  CMakeLists.txt  README.md  fgp.sh  workspace.code-workspace
res/meshes/: ankylosaurus.ply  charmander.ply  cow.ply  cow_colour.ply  ellell.ply  gearcube.ply  hedgehog.ply  hotMug.ply  sphere.ply  tetrahedron.ply
src/: config.h  main.cpp
src/helper/: Colour.cpp  Colour.h  FileHandler.cpp  FileHandler.h  HelpFace.cpp  HelpHalfEdge.cpp  HelpMesh.cpp  HelpVertex.cpp  Point.cpp  Point.h  Triangle.cpp  Triangle.h  Vector3d.cpp  Vector3d.h
src/student/: Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  Mesh.cpp  Mesh.h  Util.cpp  Util.h  Vertex.cpp  Vertex.h
